--- a/veterinaria/app/templates/listar.html
+++ b/veterinaria/app/templates/listar.html
@@ -5,28 +5,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
-    <!-- Referencia a Boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <title>Productos</title>
+    {% include 'referencias.html' %}
 </head>
 
 <body>
     {% include 'navbar.html' %}
-    <main class="container border">
-        <h1>Lista de Servicios</h1>
-        <a href="{% url 'crear' %}">Nuevo Servicio</a>
-
-        <ul>
-            {% for producto in productos %}
-            <li>
-                {{ producto.nombre }} - ${{ producto.precio }}
-                <a href="{% url 'editar' producto.id %}">Editar</a>
-                <a href="{% url 'eliminar' producto.id %}">Eliminar</a>
-            </li>
-            {% endfor %}
-        </ul>
+    <main class="container p-5 mt-5 rounded-4 shadow-lg bg-white">
+        <h1 class="mb-4 text-center">Lista de Servicios</h1>
+        <table class="table table-hover align-middle">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Precio</th>
+                    <th>Descripción</th>
+                    <th colspan="2">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for producto in productos %}
+                <tr>
+                    <td>{{producto.nombre}}</td>
+                    <td>{{producto.precio}}</td>
+                    <td>{{producto.descripcion}}</td>
+                    <td><a href="{% url 'editar' producto.id %}" class="btn btn-warning"><i class="bi bi-pencil-square"></i>&nbsp;</a>
+                        <a href="{% url 'eliminar' producto.id %}" class="btn btn-danger" onclick="return confirmarEliminacion()"><i class="bi bi-trash3-fill"></i>&nbsp;</a>
+                    </td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="5" class="text-center text-muted">Sin información disponible</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </main>
 </body>
 
