--- a/veterinaria/app/templates/editar.html
+++ b/veterinaria/app/templates/editar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,18 +6,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar</title>
+    {% include 'referencias.html' %}
 </head>
 
 <body>
-    <h1>Editar Producto</h1>
+    {% include 'navbar.html' %}
+    <main class="container p-4 mt-5 rounded-4 shadow-lg bg-white">
+        <h1 class="mt-3 mb-4 text-center">Editar Producto</h1>
+        <form method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-4">
+                    Nombre: <input type="text" name="nombre" value="{{ producto.nombre }}" pattern="[A-Za-z\s]+" class="form-control"><br>
+                    Precio: <input type="text" name="precio" value="{{ producto.precio }}" pattern="^\d+(\.\d{1,2})?$" class="form-control"><br>
+                    Descripción: <textarea type="area" name="descripcion" class="form-control">{{ producto.descripcion }}</textarea><br>
+                    <label for="categoria" class="form-label">Categoría:</label>
+                        <select name="categoria" id="categoria" class="form-select" required>
+                            
+                            {% for cat in categorias %}
+                                <option value="{{ cat.id }}" 
+                                    {% if cat.id == producto.categoria.id %}selected{% endif %}>
+                                    {{ cat.descripcion }}
+                                </option>
+                            {% endfor %}
 
-    <form method="post">
-        {% csrf_token %}
-        Nombre: <input type="text" name="nombre" value="{{ producto.nombre }}"><br>
-        Precio: <input type="text" name="precio" value="{{ producto.precio }}"><br>
-        Descripción: <textarea name="descripcion">{{ producto.descripcion }}</textarea><br>
-        <button type="submit">Actualizar</button>
-    </form>
+                        </select>             
+                    <button type="submit" class="btn btn-success">Actualizar</button>
+                    <a href="{% url 'listar' %}" class="btn btn-secondary mb-4 mt-4">Regresar</a>
+                </div>
+            </div>
+        </form>
+    </main>
 </body>
 
 </html>
