--- a/veterinaria/app/templates/navbar.html
+++ b/veterinaria/app/templates/navbar.html
@@ -18,10 +18,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Ver página principal</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'listar' %}">Ver página principal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Servicios</a>
+                        <a class="nav-link" href="{% url 'crear' %}">Servicios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Citas</a>
