--- a/veterinaria/app/static/css/style.css
+++ b/veterinaria/app/static/css/style.css
@@ -106,3 +106,60 @@
   transition-delay: 200ms;
   transform: scale(1) rotate(360deg);
 }
+
+.delete-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition: 0.3s ease;
+  overflow: hidden;
+  position: relative;
+  text-decoration: none;
+}
+
+.svgIcon {
+  width: 14px;
+  transition: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.delete-button:hover {
+  width: 140px;
+  border-radius: 50px;
+  background-color: rgb(255, 69, 69);
+  align-items: center;
+}
+
+.delete-button:hover .svgIcon {
+  width: 50px;
+  transform: translateY(60%);
+  transition: 0.3s;
+}
+
+/* Texto flotante */
+.delete-button::before {
+  position: absolute;
+  top: -20px;
+  content: "Eliminar";
+  color: white;
+  font-size: 2px;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.delete-button:hover::before {
+  font-size: 13px;
+  opacity: 1;
+  transform: translateY(30px);
+}
+
