--- a/veterinaria/app/templates/listar.html
+++ b/veterinaria/app/templates/listar.html
@@ -28,8 +28,23 @@
                     <td>{{producto.nombre}}</td>
                     <td>{{producto.precio}}</td>
                     <td>{{producto.descripcion}}</td>
-                    <td><a href="{% url 'editar' producto.id %}" class="btn btn-warning"><i class="bi bi-pencil-square"></i>&nbsp;</a>
-                        <a href="{% url 'eliminar' producto.id %}" class="btn btn-danger" onclick="return confirmarEliminacion()"><i class="bi bi-trash3-fill"></i>&nbsp;</a>
+                    <td class="text-end">
+                        <div class="d-inline-flex align-items-center gap-2">
+                            <a href="{% url 'editar' producto.id %}" class="btn btn-warning btn-sm">
+                                <i class="bi bi-pencil-square"></i>
+                            </a>
+                            <!-- Variante compacta del botón delete para tablas -->
+                            <a href="{% url 'eliminar' producto.id %}" class="delete-button delete-button--compact"
+                                onclick="return confirmarEliminacion()" title="Eliminar">
+                                <svg viewBox="0 0 448 512" class="svgIcon" aria-hidden="true">
+                                    <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 
+                                            0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 
+                                            0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 
+                                            467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 
+                                            47.9-45L416 128z"></path>
+                                </svg>
+                            </a>
+                        </div>
                     </td>
                 </tr>
                 {% empty %}
