--- a/veterinaria/app/templates/navbar.html
+++ b/veterinaria/app/templates/navbar.html
@@ -65,7 +65,7 @@
                     <!-- Logout -->
                     <form method="post" action="">
                         {% csrf_token %}
-                        <button type="submit" class="Btn" aria-label="Cerrar sesión" title="Cerrar sesión">
+                        <button type="submit" class="btn-logout" aria-label="Cerrar sesión" title="Cerrar sesión">
                             <div class="sign">
                                 <svg viewBox="0 0 512 512" aria-hidden="true" focusable="false">
                                     <path
