--- a/veterinaria/app/templates/navbar.html
+++ b/veterinaria/app/templates/navbar.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NavBar</title>
+    <!-- Referencia CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% include 'referencias.html' %}
 </head>
 
@@ -48,7 +50,8 @@
                             <!-- Sol icon -->
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="28" height="28"
                                 fill="currentColor">
-                                <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75z
+                                <path
+                                    d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75z
                                         M7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0z
                                         M18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59z
                                         M21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75z
@@ -72,7 +75,10 @@
                                         d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z" />
                                 </svg>
                             </div>
-                            <div class="text">Cerrar sesión</div>
+                            <div class="text">{% if user.is_authenticated %}
+                                <a href="{% url 'logout' %}">Cerrar sesión</a>
+                                {% endif %}
+                            </div>
                         </button>
                     </form>
                 </div>
