separar css por panel, login y style que seria la pagina principal

--- a/veterinaria/app/templates/crear.html
+++ b/veterinaria/app/templates/crear.html
@@ -8,11 +8,11 @@
     <title>Crear</title>
     {% include 'referencias.html' %}
     <!-- Referencia CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/panel.css' %}">
 </head>
 
 <body>
-    {% include 'navbar.html' %}
+    {% include 'navbar-panel.html' %}
     <main class="container p-4 mt-5 rounded-4 shadow-lg bg-white">
         <h1 class="mb-4 text-center">Crear Producto</h1>
         <form method="post">
