--- a/veterinaria/app/templates/navbar-panel.html
+++ b/veterinaria/app/templates/navbar-panel.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NavBar</title>
+    <title>NavBar - Panel</title>
     <!-- Referencia CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/panel.css' %}">
     {% include 'referencias.html' %}
 </head>
 
