--- a/veterinaria/app/templates/editar.html
+++ b/veterinaria/app/templates/editar.html
@@ -8,11 +8,11 @@
     <title>Editar</title>
     {% include 'referencias.html' %}
     <!-- Referencia CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/panel.css' %}">
 </head>
 
 <body>
-    {% include 'navbar.html' %}
+    {% include 'navbar-panel.html' %}
     <main class="container p-4 mt-5 rounded-4 shadow-lg bg-white">
         <h1 class="mt-3 mb-4 text-center">Editar Producto</h1>
         <form method="post">
