--- a/veterinaria/app/templates/listar.html
+++ b/veterinaria/app/templates/listar.html
@@ -8,11 +8,11 @@
     <title>Productos</title>
     {% include 'referencias.html' %}
     <!-- Referencia CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/panel.css' %}">
 </head>
 
 <body>
-    {% include 'navbar.html' %}
+    {% include 'navbar-panel.html' %}
     <main class="container p-5 mt-5 rounded-4 shadow-lg bg-white">
         <h1 class="mb-4 text-center">Lista de Servicios</h1>
         <table class="table table-hover align-middle">
