navbar pagina principal

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veterinaria</title>
+    <!-- Referencias de Bootstrap -->
     {% include 'referencias.html' %}
-    <!-- Referencia CSS -->
+    <!-- Referencia a CSS página principal -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    
+    {% include 'navbar.html' %}
 </body>
 </html>
