solo cambie la foto del logo pq tenia background

--- a/veterinaria/app/templates/login.html
+++ b/veterinaria/app/templates/login.html
@@ -16,13 +16,13 @@
 
             <!-- Columna izquierda (imagen/sistema) -->
             <div class="col-logo d-flex flex-column justify-content-center">
-                <img class="system-image" src="{% static 'img/logo.jpeg' %}" alt="Sistema">
+                <img class="system-image" src="{% static 'img/logo.png' %}" alt="Sistema">
                 <p class="text-center px-4 text-muted small mb-4">PetCare</p>
             </div>
 
             <!-- Columna del formulario -->
             <div class="col-form d-flex flex-column">
-                <h2 class="title">Inicio de Sesión</h2>
+                <h2 class="title mb-4">Inicio de Sesión</h2>
 
                 <div class="px-4 pt-2">
                     <form method="POST" novalidate autocomplete="off">
