--- a/veterinaria/app/templates/navbar-panel.html
+++ b/veterinaria/app/templates/navbar-panel.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'listar' %}">Ver página
                             principal</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'crear' %}">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Citas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Mascotas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Dueños</a></li>
