--- a/veterinaria/app/templates/navbar-panel.html
+++ b/veterinaria/app/templates/navbar-panel.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'listar' %}">Ver página
+                        <a class="nav-link active" aria-current="page" href="{% url 'servicios' %}">Ver página
                             principal</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
