--- a/veterinaria/app/templates/navbar-panel.html
+++ b/veterinaria/app/templates/navbar-panel.html
@@ -24,13 +24,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'servicios' %}">Ver página
+                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Ver página
                             principal</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Citas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Mascotas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Dueños</a></li>
                 </ul>
 
                 <!-- derecha -->
