funcionalidad de crud citas, falta verificar las validaciones

--- a/veterinaria/app/templates/navbar-panel.html
+++ b/veterinaria/app/templates/navbar-panel.html
@@ -28,7 +28,7 @@
                             principal</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'servicios' %}">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Citas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'citas' %}">Citas</a></li>
                 </ul>
 
                 <!-- derecha -->
